# eos-browser-tools

./: Makefile.am  README.md  configure.ac
adblock-plus/: Makefile.am
chrome-helper/: Makefile.am  config.py.in  eos-google-chrome-installer.py  eos-google-chrome-system-helper.py  eos-google-chrome.in  eos-google-chrome.py
data/: Makefile.am  com.endlessm.GoogleChromeHelper.system-helper.policy.in  com.endlessm.GoogleChromeInitialSetup.desktop.in  com.endlessm.GoogleChromeInitialSetup.gschema.xml  eos-browser-appmode.desktop  eos-google-chrome-helper.appdata.xml  eos-google-chrome-helper.conf  eos-google-chrome.conf.in  google-chrome.desktop
debian/: changelog  control  eos-adblock-plus-extensions.install  eos-browser-tools.install  eos-google-chrome-helper.install
src/: Makefile.am  config.py.in  eos-browser-appmode  eos-google-chrome  eos-google-chrome-installer  eos-google-chrome-installer.py  eos-google-chrome-system-helper  eos-google-chrome-system-helper.py  eos-google-chrome.in  eos-google-chrome.py
